--- a/src/Cake.Svn/Cake.Svn.csproj
+++ b/src/Cake.Svn/Cake.Svn.csproj
@@ -74,6 +74,9 @@
     <Compile Include="..\SolutionInfo.cs">
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
+    <Compile Include="Delete\SvnDeleter.cs" />
+    <Compile Include="Delete\SvnDeleteSettings.cs" />
+    <Compile Include="Delete\SvnDeleteSettingsExtensions.cs" />
     <Compile Include="Add\SvnAddSettingsExtensions.cs" />
     <Compile Include="Internal\Attributes\ValidatedNotNullAttribute.cs" />
     <Compile Include="Internal\Extensions\ArgumentCheckExtensions.cs" />
@@ -89,7 +92,7 @@
     <Compile Include="Export\SvnExportSettings.cs" />
     <Compile Include="SvnAliases.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SvnAliases.Add.cs" />
+    <Compile Include="SvnAliases.Delete.cs" />
     <Compile Include="SvnCredentials.cs" />
     <Compile Include="SvnDepth.cs" />
     <Compile Include="SvnLineStyle.cs" />
