--- a/src/Cake.Svn.Tests/packages.config
+++ b/src/Cake.Svn.Tests/packages.config
@@ -3,10 +3,11 @@
   <package id="Cake.Core" version="0.22.0" targetFramework="net46" />
   <package id="Cake.Testing" version="0.22.0" targetFramework="net46" />
   <package id="NSubstitute" version="1.10.0.0" targetFramework="net46" />
-  <package id="xunit" version="2.1.0" targetFramework="net46" />
-  <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
-  <package id="xunit.assert" version="2.1.0" targetFramework="net46" />
-  <package id="xunit.core" version="2.1.0" targetFramework="net46" />
-  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net46" />
-  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net46" />
+  <package id="xunit" version="2.3.0" targetFramework="net46" />
+  <package id="xunit.abstractions" version="2.0.1" targetFramework="net46" />
+  <package id="xunit.analyzers" version="0.7.0" targetFramework="net46" />
+  <package id="xunit.assert" version="2.3.0" targetFramework="net46" />
+  <package id="xunit.core" version="2.3.0" targetFramework="net46" />
+  <package id="xunit.extensibility.core" version="2.3.0" targetFramework="net46" />
+  <package id="xunit.extensibility.execution" version="2.3.0" targetFramework="net46" />
 </packages>
