--- a/src/Cake.Svn.Tests/Cake.Svn.Tests.csproj
+++ b/src/Cake.Svn.Tests/Cake.Svn.Tests.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Fixtures\Delete\SvnDeleterFixture.cs" />
     <Compile Include="Fixtures\Add\SvnAdderFixture.cs" />
     <Compile Include="Fixtures\Export\SvnExporterFixture.cs" />
+    <Compile Include="Fixtures\Info\SvnInfoFixture.cs" />
     <Compile Include="Internal\Extensions\CheckArgumentExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Unit\Delete\SvnDeleterTests.cs" />
@@ -170,6 +171,9 @@
     <Compile Include="Unit\Add\SvnAddSettingsTests.cs" />
     <Compile Include="Unit\Export\SvnExporterTests.cs" />
     <Compile Include="Unit\Export\SvnExportSettingsTests.cs" />
+    <Compile Include="Unit\Info\SvnInfoSettingsTests.cs" />
+    <Compile Include="Unit\Info\SvnInfoResultTests.cs" />
+    <Compile Include="Unit\Info\SvnInfoTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
