--- a/src/Cake.Svn/Cake.Svn.csproj
+++ b/src/Cake.Svn/Cake.Svn.csproj
@@ -74,8 +74,11 @@
     <Compile Include="..\SolutionInfo.cs">
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
+    <Compile Include="Add\SvnAddSettingsExtensions.cs" />
     <Compile Include="Internal\Attributes\ValidatedNotNullAttribute.cs" />
     <Compile Include="Internal\Extensions\ArgumentCheckExtensions.cs" />
+    <Compile Include="Add\SvnAdder.cs" />
+    <Compile Include="Add\SvnAddSettings.cs" />
     <Compile Include="Internal\Extensions\SvnDepthExtensions.cs" />
     <Compile Include="Internal\Extensions\SvnExportSettingsExtensions.cs" />
     <Compile Include="Internal\Extensions\SvnLineStyleExtensions.cs" />
@@ -86,6 +89,7 @@
     <Compile Include="Export\SvnExportSettings.cs" />
     <Compile Include="SvnAliases.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SvnAliases.Add.cs" />
     <Compile Include="SvnCredentials.cs" />
     <Compile Include="SvnDepth.cs" />
     <Compile Include="SvnLineStyle.cs" />
