(GH-42) Added mappings and tests for ThrowOnCancel, ThrowOnError and ThrowOnWarning settings.

--- a/src/Cake.Svn/Cake.Svn.csproj
+++ b/src/Cake.Svn/Cake.Svn.csproj
@@ -101,6 +101,7 @@
     <Compile Include="SvnAliases.Info.cs" />
     <Compile Include="SvnAliases.Delete.cs" />
     <Compile Include="SvnCredentials.cs" />
+    <Compile Include="SvnClientArgsExtensions.cs" />
     <Compile Include="SvnKind.cs" />
     <Compile Include="SvnDepth.cs" />
     <Compile Include="SvnLineStyle.cs" />
