--- a/src/Cake.Svn.Tests/Cake.Svn.Tests.csproj
+++ b/src/Cake.Svn.Tests/Cake.Svn.Tests.csproj
@@ -174,6 +174,9 @@
     <Compile Include="Unit\Info\SvnInfoSettingsTests.cs" />
     <Compile Include="Unit\Info\SvnInfoResultTests.cs" />
     <Compile Include="Unit\Info\SvnInfoTests.cs" />
+    <Compile Include="Fixtures\Checkout\SvnCheckouterFixture.cs" />
+    <Compile Include="Unit\Checkout\SvnCheckouterTests.cs" />
+    <Compile Include="Unit\Checkout\SvnCheckoutSettingsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
