--- a/src/Cake.Svn.Tests/packages.config
+++ b/src/Cake.Svn.Tests/packages.config
@@ -6,7 +6,7 @@
   <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="net46" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="NETStandard.Library" version="2.0.1" targetFramework="net46" />
-  <package id="NSubstitute" version="3.0.1" targetFramework="net46" />
+  <package id="NSubstitute" version="3.1.0" targetFramework="net46" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net46" />
   <package id="System.Collections" version="4.3.0" targetFramework="net46" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net46" />
@@ -49,6 +49,7 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net46" />
