--- a/nuspec/nuget/Cake.Svn.nuspec
+++ b/nuspec/nuget/Cake.Svn.nuspec
@@ -12,9 +12,9 @@ Addin that extends the Cake build automation system with Subversion features usi
     </description>
     <licenseUrl>https://github.com/cake-contrib/Cake.Svn/blob/develop/LICENSE</licenseUrl>
     <projectUrl>http://cake-contrib.github.io/Cake.Svn/</projectUrl>
-    <iconUrl>https://cdn.jsdelivr.net/gh/cake-contrib/graphics@a5cf0f881c390650144b2243ae551d5b9f836196/png/cake-contrib-medium.png</iconUrl>
+    <iconUrl>https://cdn.jsdelivr.net/gh/cake-contrib/graphics/png/cake-contrib-medium.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <repository type="git" url="https://github.com/cake-contrib/Cake.Svn"/>
+    <repository type="git" url="https://github.com/cake-contrib/Cake.Svn" />
     <copyright>Copyright © 2018 Cake.Svn contributors</copyright>
     <tags>Cake Script Subversion</tags>
     <releaseNotes>https://github.com/cake-contrib/Cake.Svn/releases/tag/0.5.0</releaseNotes>
