--- a/src/Cake.Svn.Tests/Cake.Svn.Tests.csproj
+++ b/src/Cake.Svn.Tests/Cake.Svn.Tests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Fixtures\Add\SvnAdderFixture.cs" />
     <Compile Include="Fixtures\Export\SvnExporterFixture.cs" />
     <Compile Include="Fixtures\Info\SvnInfoFixture.cs" />
+    <Compile Include="Fixtures\Revert\SvnRevertFixture.cs" />
     <Compile Include="Fixtures\Status\SvnStatusFixture.cs" />
     <Compile Include="Fixtures\Update\SvnUpdaterFixture.cs" />
     <Compile Include="Fixtures\Vacuum\SvnVacuumFixture.cs" />
@@ -82,6 +83,8 @@
     <Compile Include="Fixtures\Checkout\SvnCheckouterFixture.cs" />
     <Compile Include="Unit\Checkout\SvnCheckouterTests.cs" />
     <Compile Include="Unit\Checkout\SvnCheckoutSettingsTests.cs" />
+    <Compile Include="Unit\Revert\SvnReverterTests.cs" />
+    <Compile Include="Unit\Revert\SvnRevertSettingsTests.cs" />
     <Compile Include="Unit\Status\SvnStatusSettingsTests.cs" />
     <Compile Include="Unit\Status\SvnStatusTests.cs" />
     <Compile Include="Unit\Update\SvnUpdaterTests.cs" />
